--- a/index.html
+++ b/index.html
@@ -1,26 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-        div.card{
-            width:250px;
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),
-                        0 6px 20px 0 rgba(0,0,0,0.19);
-            text-align:center;
-        }
-
-        div.header{
-            background-color:#4CAF50;
-            color:white;
-            padding:10px;
-            font-size:40px;
-        }
-
-        div.container{
-            padding:10px;
-        }
-
-    </style>
+   <link rel="stylesheet" type="text/css" href="style.css">
 	<title>Cards</title>
 </head>
 <body>
@@ -34,6 +15,15 @@
 
         <div class="container">
             <p>January 1, 2021</p>
+        </div>
+    </div>
+
+    <h2>Polaroid images cards</h2>
+
+    <div class="polaroid">
+        <img src="images/img.jpg" alt="imagen" style="width:100%"/>
+        <div class="container">
+            <p>A beautiful image</p>
         </div>
     </div>
 </body>
